# yarsync

./: .gitignore  NEWS.rst  README.rst  README_draft.rst  _config.yml  details.html  index.html  pyproject.toml  pytest.ini  pytest.sh  requirements.txt  setup.py  todo.txt  tox.ini  yarsync.1.html
_layouts/: default.html
assets/css/: style.scss
docs/: Makefile  details.rst  habr.md  requirements.txt  yarsync.1  yarsync.1.html  yarsync.1.md
docs/source/: conf.py  details.rst  index.rst  yarsync.1.md
tests/: conftest.py  helpers.py  settings.py  test_clone.py  test_commit.py  test_env_vars.py  test_init.py  test_log.py  test_pull_push.py  test_real_copy.py  test_remote.py  test_status.py  test_sync.py  test_yarsync.py  test_ys_helpers.py  tests.txt
tests/test_dir/.ys/: config.ini
tests/test_dir_filter/.ys/: rsync-filter
tests/test_dir_filter/.ys/logs/: 2.txt
tests/test_dir_ys_bad_permissions/.ys/logs/: 3.txt
yarsync/: __init__.py  version.py  yarsync  yarsync.py
